[tool.poetry]
name = "exasol-toolbox"
packages = [
    { include = "exasol" },
]
version = "0.17.0"
description = "Your one-stop solution for managing all standard tasks and core workflows of your Python project."
authors = [
    "Nicola Coretti <nicola.coretti@exasol.com>"
]
license = "MIT"
readme = "README.md"
include = [
    "README.rst",
    "doc/changelog.rst",
    "LICENSE",
    "exasol/toolbox/templates/**/*"
]

keywords = [
    "nox",
    "tooling",
    "ci",
    "cd",
    "exasol",
    "infrastructure",
]

[tool.poetry.urls]
"Homepage" = "https://www.exasol.com/"
"Documentation" = "https://exasol.github.io/python-toolbox/"
"Source" = "https://github.com/exasol/python-toolbox"
"Issues" = "https://github.com/exasol/python-toolbox/issues"
"Changelog" = "https://exasol.github.io/python-toolbox/changelog.html"

[tool.poetry.dependencies]
black = ">=24.1.0"
coverage = ">=6.4.4,<8.0.0"
furo = ">=2022.9.15"
importlib-resources = ">=5.12.0"
import-linter = "^2.0"
isort = "^5.12.0"
mypy = ">=0.971"
myst-parser = ">=2.0.0,<4"
nox = ">=2022.8.7"
pluggy = "^1.5.0"
pre-commit = ">=3.1.1,<4"
prysk = {extras = ["pytest-plugin"], version = ">0.17.0,<1"}
pylint = ">=2.15.4"
pytest = ">=7.2.2,<9"
python = "^3.9"
pyupgrade = ">=2.38.2,<4.0.0"
shibuya = ">=2024.5.14"
sphinx = ">=5.3,<8"
sphinx-copybutton = "^0.5.0"
sphinx-inline-tabs = "^2023.4.21"
sphinx-design = ">=0.5.0,<1"
typer = {extras = ["all"], version = ">=0.7.0"}
bandit = {extras = ["toml"], version = "^1.7.9"}
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
autoimport = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tooling
[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 7.5

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800


[[tool.mypy.overrides]]
module = [
    "exasol.toolbox.sphinx.multiversion.*",
    "test.unit.*",
    "test.integration.*",
]
ignore_errors = true

[tool.poetry.plugins."console_scripts"]
"version-check" = "exasol.toolbox.pre_commit_hooks.package_version:main"


[tool.poetry.scripts]
tbx = 'exasol.toolbox.tools.tbx:CLI'
sphinx-multiversion = 'exasol.toolbox.sphinx.multiversion:main'
