[project]
name = "exasol-toolbox"
version = "1.9.0"
requires-python = ">=3.9,<4.0"
description = "Your one-stop solution for managing all standard tasks and core workflows of your Python project."
authors = [
    { name = "Nicola Coretti", email = "nicola.coretti@exasol.com" },
    { name = "Ariel Schulz", email = "ariel.schulz@exasol.com" },
]
readme = "README.md"
license = "MIT"
keywords = [
    "nox",
    "tooling",
    "ci",
    "cd",
    "exasol",
    "infrastructure",
]
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [
    { include = "exasol" },
]
include = [
    "README.rst",
    "doc/changelog.rst",
    "LICENSE",
    "exasol/toolbox/templates/**/*"
]

[poetry.urls]
Homepage = "https://www.exasol.com/"
Documentation = "https://exasol.github.io/python-toolbox/"
Source = "https://github.com/exasol/python-toolbox"
Issues = "https://github.com/exasol/python-toolbox/issues"
Changelog = "https://exasol.github.io/python-toolbox/changelog.html"

[tool.poetry.dependencies]
bandit = { extras = ["toml"], version = "^1.7.9" }
black = ">=24.1.0,<26"
coverage = ">=6.4.4,<8.0.0"
furo = ">=2022.9.15"
importlib-resources = ">=5.12.0"
import-linter = "^2.0"
isort = "^6.0.1"
jinja2 = "^3.1.6"
mypy = ">=0.971"
myst-parser = ">=2.0.0,<4"
nox = ">=2022.8.7"
pip-audit = "^2.7.3"
pip-licenses = "^5.0.0"
pluggy = "^1.5.0"
pre-commit = ">=4"
pydantic = "^2.11.5"
pylint = ">=2.15.4"
pysonar = "^1.0.1.1548"
pytest = ">=7.2.2,<9"
pyupgrade = ">=2.38.2,<4.0.0"
shibuya = ">=2024.5.14"
sphinx = ">=5.3,<8"
sphinx-copybutton = "^0.5.0"
sphinx-inline-tabs = "^2023.4.21"
sphinx-design = ">=0.5.0,<1"
typer = { extras = ["all"], version = ">=0.7.0" }

[tool.poetry.group.dev.dependencies]
autoimport = "^1.4.0"
cookiecutter = "^2.6.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# Tooling
[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 7.5

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.mypy]
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = [
    "test.unit.*",
    "test.integration.*",
]
ignore_errors = true

[tool.poetry.plugins."console_scripts"]
tbx = 'exasol.toolbox.tools.tbx:CLI'
sphinx-multiversion = 'exasol.toolbox.sphinx.multiversion:main'

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.sonar]
projectKey = "com.exasol:python-toolbox"
hostUrl = "https://sonarcloud.io"
organization = "exasol"
exclusions = "exasol/toolbox/version.py"
