[tool.poetry]
name = "metrics-schema"
version = "0.1.0"
description = ""
authors = ["Nicola Coretti <nicola.coretti@exasol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
