[project]
name = "{{cookiecutter.pypi_package_name}}"
version = "0.1.0"
requires-python = ">={{cookiecutter.python_version_min}},<4.0"
description = "{{cookiecutter.description}}"
authors = [
    {name = "{{cookiecutter.author_full_name}}", email = "{{cookiecutter.author_email}}"},
]
readme = "README.md"
license = "MIT"
keywords = ['exasol', '{{cookiecutter.package_name}}']
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [
    { include = "exasol" },
]

[poetry.urls]
repository = "https://github.com/exasol/{{cookiecutter.repo_name}}"
homepage = "https://github.com/exasol/{{cookiecutter.repo_name}}"

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
exasol-toolbox = "^1.6.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.0
ignore = []

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[[tool.mypy.overrides]]
module = [
    "test.*",
]
ignore_errors = true

[tool.ruff]
exclude = []

[tool.ruff.lint]
extend-ignore = [
    "E",      # Syntax errors
    "F",      # Pyflakes rules (excluding F401)
    "UP",     # pyupgrade rules
    "D",      # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[tool.sonar]
projectKey = "com.exasol:{{cookiecutter.repo_name}}"
hostUrl = "https://sonarcloud.io"
organization = "exasol"
exclusions = "exasol/{{cookiecutter.package_name}}/version.py"
